--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.11",
     "daisyui": "^5.0.0",
+    "emailjs": "^4.0.3",
     "lucide": "^0.479.0",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
